--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,9 @@ test_*
 temp/
 O_WEBSITE_REDESIGN_PROPOSAL.md
 o_website_prototype.html
+
+# Simulation runtime files
+simulation/data/
+simulation/logs/
+simulation/nodes/
+simulation/*_report.txt
