🌊 Implement exchange rate initialization system
✨ Features:
- Initialize O currency exchange rates with theoretical water prices at startup
- Minimum measurements threshold (10) before switching to measured rates
- Smooth transition from theoretical to measured exchange rates
- Comprehensive RPC commands for exchange rate management

🔧 Technical:
- Added ExchangeRateInitializationManager to consensus layer
- Created RPC commands: initializeexchangerates, getexchangeratestatus, getexchangeratestatistics, getminimummeasurementsthreshold
- Integrated with existing measurement system for theoretical rate calculation
- Status tracking: theoretical, measured, insufficient_data

💰 Exchange Rate Management:
- 30 major O currencies supported (OUSD, OEUR, OJPY, etc.)
- Theoretical rates based on water prices in corresponding fiat currencies
- Fallback to 1:1 rates if no water price data available
- Automatic transition to measured rates after 10+ measurements

🏗️ Architecture:
- Non-invasive extension of existing measurement system
- Maintains compatibility with all existing functionality
- Provides bootstrap solution for initial exchange rates
- Quality control through minimum measurements threshold

✅ Status: Exchange rate initialization system complete and ready for production

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -116,6 +116,7 @@ add_library(bitcoin_consensus STATIC EXCLUDE_FROM_ALL
   consensus/stabilization_coins.cpp
   consensus/stabilization_consensus.cpp
   consensus/measurement_rewards.cpp
+  consensus/exchange_rate_initialization.cpp
   # consensus/brightid_integration.cpp  # Temporarily disabled due to compilation issues
   consensus/tx_check.cpp
   consensus/user_consensus.cpp
@@ -315,6 +316,7 @@ add_library(bitcoin_node STATIC EXCLUDE_FROM_ALL
   rpc/o_currency_exchange_rpc.cpp
   rpc/o_stabilization_integration_rpc.cpp
   rpc/o_measurement_rewards_rpc.cpp
+  rpc/o_exchange_rate_init_rpc.cpp
          # rpc/o_currency_lifecycle_rpc.cpp  # Temporarily disabled due to RPC API changes
          # rpc/o_brightid_rpc.cpp  # Temporarily disabled due to RPC API changes
   rpc/output_script.cpp
