--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -117,6 +117,7 @@ add_library(bitcoin_consensus STATIC EXCLUDE_FROM_ALL
   consensus/stabilization_consensus.cpp
   consensus/measurement_rewards.cpp
   consensus/exchange_rate_initialization.cpp
+  consensus/measurement_readiness.cpp
   # consensus/brightid_integration.cpp  # Temporarily disabled due to compilation issues
   consensus/tx_check.cpp
   consensus/user_consensus.cpp
@@ -317,6 +318,7 @@ add_library(bitcoin_node STATIC EXCLUDE_FROM_ALL
   rpc/o_stabilization_integration_rpc.cpp
   rpc/o_measurement_rewards_rpc.cpp
   rpc/o_exchange_rate_init_rpc.cpp
+  rpc/o_measurement_readiness_rpc.cpp
          # rpc/o_currency_lifecycle_rpc.cpp  # Temporarily disabled due to RPC API changes
          # rpc/o_brightid_rpc.cpp  # Temporarily disabled due to RPC API changes
   rpc/output_script.cpp
