Enable KYC Validation for USA Users in O Blockchain
- Integrate user consensus system with geographic access control
- Enable KYC validation method for USA users (requires_kyc = true)
- Add verification method selection based on country requirements
- USA users: THIRD_PARTY_KYC recommended, all KYC methods allowed
- Crypto-friendly countries: GOVERNMENT_ID recommended, all methods allowed
- Enhanced endorsement validation to enforce country-specific requirements
- Added RPC commands for verification method queries:
  - getrecommendedverificationmethod: Get recommended method for country
  - getallowedverificationmethods: Get all allowed methods for country
  - doescountryrequirekyc: Check if country requires KYC
- Updated CMake build system to include new files
- Maintains privacy-preserving options for crypto-friendly jurisdictions
- Ensures regulatory compliance for monitored jurisdictions like USA

The O Blockchain now properly supports both privacy-preserving verification
(for crypto-friendly countries) and KYC compliance (for regulated markets
like the USA), enabling global deployment while respecting local regulations.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -118,6 +118,7 @@ add_library(bitcoin_consensus STATIC EXCLUDE_FROM_ALL
   consensus/measurement_rewards.cpp
   consensus/exchange_rate_initialization.cpp
   consensus/measurement_readiness.cpp
+  consensus/geographic_access_control.cpp
   # consensus/brightid_integration.cpp  # Temporarily disabled due to compilation issues
   consensus/tx_check.cpp
   consensus/user_consensus.cpp
@@ -319,6 +320,7 @@ add_library(bitcoin_node STATIC EXCLUDE_FROM_ALL
   rpc/o_measurement_rewards_rpc.cpp
   rpc/o_exchange_rate_init_rpc.cpp
   rpc/o_measurement_readiness_rpc.cpp
+  rpc/o_user_verification_rpc.cpp
          # rpc/o_currency_lifecycle_rpc.cpp  # Temporarily disabled due to RPC API changes
          # rpc/o_brightid_rpc.cpp  # Temporarily disabled due to RPC API changes
   rpc/output_script.cpp
