Update .gitignore to exclude internal documentation from commits
ADDED: Internal documentation patterns to .gitignore

Prevents accidental commits of:
- *_COMPLETE.md
- *_SUMMARY.md
- *_RESULTS.md
- *_PLAN.md
- *_STRATEGY.md
- *_AUDIT.md
- HACKER*.md
- PROMOTION*.md
- DATABASE*.md
- TESTING*.md
- TEST*.md
- MEASUREMENT*.md

POLICY:
✅ Essential docs: Keep in code repo (README, CONTRIBUTING, etc.)
✅ Technical docs: Add to wiki
❌ Internal docs: Don't commit (planning, strategies, results)
❌ Marketing docs: Keep in separate promotion repo

Ensures clean code repository focused on technical content.

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,20 @@ temp/
 O_WEBSITE_REDESIGN_PROPOSAL.md
 o_website_prototype.html
 
+# Internal documentation (goes in wiki, not code repo)
+/*_COMPLETE.md
+/*_SUMMARY.md
+/*_RESULTS.md
+/*_PLAN.md
+/*_STRATEGY.md
+/*_AUDIT.md
+/HACKER*.md
+/PROMOTION*.md
+/DATABASE*.md
+/TESTING*.md
+/TEST*.md
+/MEASUREMENT*.md
+
 # Simulation runtime files
 simulation/data/
 simulation/logs/
