Complete measurement system: automatic invitations, user submissions, stability detection
December 2025 Critical Fixes:

1. Automatic Invitation System
   - Miners create invitations every 10 blocks
   - All 142 currencies monitored (not just 11)
   - MEASUREMENT_INVITE transactions included in blocks
   - Gap detection uses blockchain data for accuracy

2. User Measurement Submission
   - Fixed submitwaterpricetx to extract user pubkey from wallet
   - Fixed submitexchangeratetx to extract user pubkey from wallet
   - Fixed submitvalidationtx to extract user pubkey from wallet
   - Proper signature generation using wallet keys
   - Users can now submit measurements that pass validation

3. Average Calculations Fixed
   - GetWaterPricesInRange() now queries blockchain database
   - GetExchangeRatesInRange() now queries blockchain database
   - All averages calculated from real blockchain data
   - Daily averages, stability detection, gaussian validation working

4. Stabilization Reward Recipients
   - Implemented FindUsersByBirthCurrency() in CBrightIDUserDB
   - GetUsersByCurrency() now queries users by birth currency
   - SelectRewardRecipients() can select from stable currency holders
   - Complete reward distribution for stabilization mining

Modified Files (13):
- src/node/miner.cpp - Automatic invitations for 142 currencies
- src/measurement/measurement_system.cpp - Database query integration
- src/rpc/o_blockchain_tx_rpc.cpp - Wallet signing implementation
- src/consensus/currency_exchange.h - Public GetSupportedCurrencies()
- src/consensus/o_brightid_db.cpp/h - Birth currency queries
- src/consensus/stabilization_helpers.cpp - User selection by currency

New Files (6):
- src/primitives/o_transactions.cpp/h - O transaction structures
- src/consensus/o_tx_validation.cpp/h - Blockchain validation
- src/rpc/o_blockchain_tx_rpc.cpp/h - Blockchain transaction RPCs

Systems Now Operational:
✅ User measurement submission
✅ Automatic invitations (all 142 currencies)


--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -122,11 +122,13 @@ add_library(bitcoin_consensus STATIC EXCLUDE_FROM_ALL
   consensus/measurement_readiness.cpp
   consensus/geographic_access_control.cpp
   consensus/brightid_integration.cpp
+  consensus/o_tx_validation.cpp
   consensus/tx_check.cpp
   consensus/user_consensus.cpp
   hash.cpp
   primitives/block.cpp
   primitives/transaction.cpp
+  primitives/o_transactions.cpp
   pubkey.cpp
   script/interpreter.cpp
   script/script.cpp
@@ -324,6 +326,7 @@ add_library(bitcoin_node STATIC EXCLUDE_FROM_ALL
   rpc/o_currency_exchange_rpc.cpp
   rpc/o_stabilization_integration_rpc.cpp
   rpc/o_measurement_rewards_rpc.cpp
+  rpc/o_blockchain_tx_rpc.cpp
   rpc/o_exchange_rate_init_rpc.cpp
   rpc/o_measurement_readiness_rpc.cpp
   rpc/o_user_verification_rpc.cpp
